--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Build end to end data products with open source tools"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "dagster==1.10.2",    
+    "dagster==1.10.2",
     "dagster-dbt==0.26.2",
     "dagster-duckdb>=0.26.2",
     "dagster-webserver==1.10.2",
@@ -25,8 +25,13 @@ dependencies = [
     "flash>=1.0.3",
     "flask>=3.1.0",
     "great-tables>=0.16.1",
+    "dagster-components>=0.2.2",
 ]
 
-[tool.dagster]
-module_name = "pipeline.definitions"
-code_location_name = "pipeline"
+[tool.dg]
+directory_type = "project"
+
+[tool.dg.project]
+root_module = "pipeline"
+code_location_target_module = "pipeline.definitions"
+
